products background was icky on smaller devices.. so fixed it

--- a/src/assets/sass/_products.scss
+++ b/src/assets/sass/_products.scss
@@ -1,9 +1,5 @@
-.products-section {
-  
-  
+.products-section {  
   background: url('../images/bg-07.png');
-  background-attachment: fixed;
-  background-size: cover;
   padding: 0;
   margin: 0;
   height: auto;
@@ -69,6 +65,10 @@
   }
 
   @media (min-width: 992px) {
+    background: url('../images/bg-07.png');
+    background-attachment: fixed;
+    background-size: cover;
+
     .container{
       padding-top: 6%;
       padding-bottom: 6%;
